*Empty MediaWiki Message*

--- a/Пургаз.mw
+++ b/Пургаз.mw
@@ -2,13 +2,25 @@
  
 Васенцеде Инязоронь Пургазононть лемензэ ледстневи 1229 [[Ие|иестэ]], кода овладимерень-суздалень инязорось Юриесь Эрзянь Масторонть лакс якась.
 
-Кода сёрмады Юрченков В.А. эсензэ книгасонзо "Эрзя ды Мокша кезэрень ды неень шкатнестэ" (1999):
-: ''«пек стака шкакс ульнесь XIII пингень ушодксось … эрявсь истямо ломань, конанень кемевельть, арсеманзо, мереманзо топавтовольть, мельганзо куш ков сыргавольть. Самай истямокс кармась улеме Пургаз – превей, сюбав ойме, кеме обуця, икелев неиця».'' 
+==Пургаздо литературасо==
+Кода сёрмады Юрченков В.А. эсензэ книгасонзо<ref name="Мордовский народ">В. А. Юрченков. Мордовский народ: вехи истории. — Саранск, 2007. — с. 91 {{ref-ru}}</ref>: 
+{{Цитатань ушодома}} ({{Lang-myv|''«пек стака шкакс ульнесь XIII пингень ушодксось … эрявсь истямо ломань, конанень кемевельть, арсеманзо, мереманзо топавтовольть, мельганзо куш ков сыргавольть. Самай истямокс кармась улеме Пургаз – превей, сюпав ойме, кеме обуця, икелев неиця»''}}
+{{oq|ru|«Очень тяжёлым (для эрзян) был период начала XIII века. Требовался такой человек, которому бы верили, его идеи и поручения выполнялись бы, за ним бы шли на любое дело. Именно таким человеком стал Пургаз — мудрый, богатый душой, крепкий характером, предвидящий будущее».}}
+{{Цитатань пе}}
 
-Прядомасонть  Юрченковось В.А. сёрмады: 
-:''«Весе ёвтазесь ливтизе-аравтызе Пургаз Инязоронть… раськень васенце героекс».''
+Лия эсинзэ сёрмадовксонзо Юрченков В.А. тешксты<ref name="Мокшэрзятне умонь">Юрченков В.А. Мокшэрзятне умонь шкасто ды ней (Мордва в древности и сегодня) / В.А. Юрченков, Н.Г. Юрченкова; 4, 9, 11 путешкстне сермадозь Н.Г. Юрченковань марто вейсэ. Саранск, 1999. С. 29-30.{{ref-ru}},{{ref-myv}}</ref>: 
+{{Цитатань ушодома}} ({{Lang-myv|''«Весе ёвтазесь ливтизе-аравтызе Пургаз Инязоронть… раськень васенце героекс».''}}
+{{oq|ru|«Всё выше сказанное ставит Инязора Пургаза первым эрзянским национальным героем».}}
+{{Цитатань пе}}
 
-Инязор Пургазонть чачонзо пек парсте невтезь Егоровонь В.Ф. "Возмездие" поэмасонзо ды "Пургаз" историянь романсонть эрзянь раськень сёрмадеесь Абрамовонь К.Г., кона ютавтозь рузонь кельскак.
+Инязор Пургазонть чачонзо пек парсте невтезь Егоровонь В.Ф. «Возмездие» поэмасонзо ды «Пургаз» историянь романсонть эрзянь раськень сёрмадеесь Абрамовонь К.Г., кона ютавтозь рузонь кельскак.
+Кода сёрмады сонсь, [[Абрамов, Кузьма Григорьевич|Кузьма Абрамов]]<ref name="Национальная библиотека РК">[http://www.nbrkomi.ru/page/2918/ «Имена на книгах: автографы мордовских писателей из коллекции Петера Домокоша в Национальной библиотеке РК»: Абрамов Кузьма Григорьевич] {{ref-ru}}</ref>:
+{{Цитатань ушодома}} ({{Lang-myv|''«Пургаз» – «те сехте покш пандо шкинемасонзо, ды кармась ансяк ламо иень важодемань тевекес. «Пургаз» ёвтни эрзянь раськенть Ине ломанень ды историянь ютазь шкадонть. »''}}
+{{oq|ru|«Пургаз» – «стал для него наивысшим пиком его творчества, результатом многолетних исканий путей изложения, обобщения исторического прошлого. «Пургаз» рассказывает об героическом и историческом прошлом эрзянского народа».}}
+{{Цитатань пе}}
+
+==  Лисьмапря ==
+<references />
 
 [[Category:История|П]]
 [[Category:Мифология|П]]
