*Empty MediaWiki Message*

--- a/Пургаз.mw
+++ b/Пургаз.mw
@@ -1,6 +1,6 @@
-'''Инязор Пургаз''' — эрзянь Инязорось [[Эрзянь Мастор|Эрзянь Масторонь]] прявт XIII-це пингестэнть. Раськень Ине ушман эрзянь раськенть.  XIII пингенть ушодомастонть Пургаз ульнесь Эрзянь Масторонь прявтокс, конань эрямонь сёрмадыцятне (летописецтне) лемдильть [[Пургазонь Русесь|Пургазонь Русекс]]. 
- 
-Васенцеде Инязоронь Пургазононть лемензэ ледстневи 1229 [[Ие|иестэ]], кода овладимерень-суздалень инязорось Юриесь Эрзянь Масторонть лакс якась.
+'''Инязор Пургаз''' — эрзянь Инязоро ({{lang-ru|эрзянский князь}}<ref name="Библиотека Мо">[http://www.lib.e-mordovia.ru/Library/?Char=%C0&id=0 Библиотека Мордовской Литературы: Абрамов Кузьма Григорьевич]{{ref-ru}}</ref>), [[Эрзянь Мастор|Эрзянь Масторонь]] прявт XIII-це пингестэнть. Эрзянь Раськень Ине ушман.  
+
+XIII пингенть ушодомастонть Пургаз ульнесь Эрзянь Масторонь прявтокс, конань эрямонь сёрмадыцятне (летописецтне) лемдильть [[Пургазонь Русесь|Пургазонь Русекс]].  Васенцеде Инязоронь Пургазононть лемензэ ледстневи [[1229 ие]]стэ, кода овладимерэнь-суздалень инязорось Юриесь Эрзянь Масторонть лакс якась.
 
 ==Пургаздо литературасо==
 Кода сёрмады Юрченков В.А. эсензэ книгасонзо<ref name="Мордовский народ">В. А. Юрченков. Мордовский народ: вехи истории. — Саранск, 2007. — с. 91 {{ref-ru}}</ref>: 
