*Empty MediaWiki Message*

--- a/Абрамов,_Кузьма_Григорьевич.mw
+++ b/Абрамов,_Кузьма_Григорьевич.mw
@@ -23,7 +23,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Абрамов Кузьма Григорьевич''' ([[1914 ие]]нь [[сундерьковонь 12 чи]]стэ эрзянь<ref name="«Тиринь ёнксонь валдо»">«Тиринь ёнксонь валдо» : ледстнемань чокшне, конась алтави К. Г. Абрамовонь 100 иень топодемантень / Мордовия Республикань культурань ды туризмань ми- нистерствась, Мордовия Республикань А. С. Пушкинэнь лемсэ Национальной библиотекась, Краеведческой, национальной ды финно-угорской литературань отделэсь ; [пурныцясь В. Б. Бояркина ; витницясь Н. В. Бочканова]. – Саранск, 2014. – 25 с. – Эрзя яз.{{ref-myv}} </ref>[[Ташто Найман веле (Покш Килейбуе)|Ташто Найман велесэ]] [[Покш Килейбуе|Покш Килейбуесэ]]<ref name="youtube100">[https://www.youtube.com/watch?v=Xm3DZNvuvNk Кузьма Григорьевич Абрамов. (100лет) ]{{ref-ru}}</ref>- [[2008 ие]]нь [[умарьковонь 4 чи]]стэ<ref name="ИА REGNUM" />) — [[Эрзя|эрзянь]] сёрмадей<ref name="Чилисема">[http://chilisema.ru/upload/iblock/81c/чилисема%2011-15-ilovepdf-compressed%20(1).pdf «Чилисема», №11, 2015 ТИРИНЬ КЕЛЕСЬ ДЫ ЛИТЕРАТУРАСЬ МОНЬ ЭРЯМОСО]{{ref-myv}}</ref>. 
+'''Абрамов Кузьма Григорьевич''' ([[1914 ие]]нь [[сундерьковонь 12 чи]]стэ эрзянь<ref name="«Тиринь ёнксонь валдо»">«Тиринь ёнксонь валдо» : ледстнемань чокшне, конась алтави К. Г. Абрамовонь 100 иень топодемантень / Мордовия Республикань культурань ды туризмань министерствась, Мордовия Республикань А. С. Пушкинэнь лемсэ Национальной библиотекась, Краеведческой, национальной ды финно-угорской литературань отделэсь ; [пурныцясь В. Б. Бояркина ; витницясь Н. В. Бочканова]. – Саранск, 2014. – 25 с. – Эрзя яз.{{ref-myv}} </ref>[[Ташто Найман веле (Покш Килейбуе)|Ташто Найман велесэ]] [[Покш Килейбуе|Покш Килейбуесэ]]<ref name="youtube100">[https://www.youtube.com/watch?v=Xm3DZNvuvNk Кузьма Григорьевич Абрамов. (100лет) ]{{ref-ru}}</ref>- [[2008 ие]]нь [[умарьковонь 4 чи]]стэ<ref name="ИА REGNUM" />) — [[Эрзя|эрзянь]] сёрмадей<ref name="Чилисема">[http://chilisema.ru/upload/iblock/81c/чилисема%2011-15-ilovepdf-compressed%20(1).pdf «Чилисема», №11, 2015 ТИРИНЬ КЕЛЕСЬ ДЫ ЛИТЕРАТУРАСЬ МОНЬ ЭРЯМОСО]{{ref-myv}}</ref>. 
 
 Седе пек содавикс кода ёвтнемань, повестень, романонь ды драмань сёрмадыця. Ды, паряк, пек аламот содыть: литературас васенце эскельксэнзэ сон теинзе стихень сёрмадоманть вельде. Лисезь васенце книгазояк — стихотворетянь пусмо («Стихть», [[1940]]). Седе тов сти­хень сёрмадомань ёрокчись маштовсь тензэ рузонь ды мирэнь-масторонь классиканть, Россиянь ламо нациянь литературань сехте пара невтевкстнэнь эрзянь кельс ютавтомсто.
 
