*Empty MediaWiki Message*

--- a/Евсевьев,_Макар_Евсевьевич.mw
+++ b/Евсевьев,_Макар_Евсевьевич.mw
@@ -24,20 +24,19 @@
  |википурнавкс         = 
 }}
 
-'''Евсевьевень Макар Евсевьевич'''  ([[1864]] [[якшамковонь 18 чи]], [[Цярмун (Ветькень Республика)|Цярмун]] - [[1931]] [[панжиковонь 10 чи]] [[Саранск]] )— содавикс [[эрзят|эрзянь ломанень]] тонавтыця, наукань келень содый-теий докторось (1921). Эрзя.
+'''Евсевьев (Кобаев<ref name="fulr">[http://fulr.karelia.ru/Resursy/Sozdateli_nacionalnyh_finno-ugorskih_literatur_i_folklora/Uchenyj_prosvetitel_pedagog_Makar_Evsevevich_Evsevev/ Финно-угорские библиотеки России. Макар Евсевьевич ЕВСЕВЬЕВ]{{ref-ru}}</ref>) Макар Евсевьевич'''  ([[1864]] [[якшамковонь 18 чи]], [[Цярмун (Ветькень Республика)|Цярмун]] - [[1931]] [[панжиковонь 10 чи]] [[Саранск]] ) — васеньце<ref name="fulr" /> содавикс [[эрзят|эрзянь ломанень]] тонавтыця, наукань келень содый-теий докторось (1921). Эрзя.
 
-Макар Евсеевич чачсь [[1864]] иень [[якшамковонь 18 чи]]  (30) чистэ, [[Цярмун (Ветькень Республика)|Цярмун]] велесэ (рузокс Малые Кармалы),  неень Ибресинбуень [[Ветькень Республикась|Ветькень Масторс]]о сокиця-видицянь семиясо. 
+Макар Евсеевич чачсь [[1864]] иень [[якшамковонь 18 чи]]  (30) чистэ, [[Цярмун (Ветькень Республика)|Цярмун]] велесэ<ref name="Библиотека Мо" /> (рузокс Малые Кармалы),  неень Ибресинбуень [[Ветькень Республикась|Ветькень Масторс]]о сокиця-видицянь семиясо. 
 
 [[File:Bust Makar Evsevjev.JPG|thumb|350px|left|Макар Евсевьевэнь кеврунгозо [[Мордовиянь государственной педагогической институт М. Е. Евсевьевэнь лемсэ]], [[Саран ош]]со]]
-Эсь эрямонь малав ведьгемень иетнень Макар Евсевьев алтынзе фольклоронь пурнамонь пек эрявикс тевентень ды тень пингстэ сехте покш мель явась свадьбантень.Те домка мелесь Чачсь Евсевьевень превс-седейс, нать, сестэ, зярдо сон прядызеть Казанень инородческой семинариянть - 1883-це иестэ, ды седе тов ушодызе фольклоронь пурнамонть. Эрзянь свадьбась неявсь сонензэ прок покш коекс, конасонть кеместэ сюлмавовсь эрзянь раськенть историянзо, эрямонзо ды культуразо.
+Эсь эрямонь малав ведьгемень иетнень Макар Евсевьев алтынзе фольклоронь пурнамонь пек эрявикс тевентень ды тень пингстэ сехте покш мель явась свадьбантень. Те домка мелесь чачсь Евсевьевень превс-седейс, нать, сестэ, зярдо сон прядызеть Казанень инородческой семинариянть - 1883-це иестэ, ды седе тов ушодызе фольклоронь пурнамонть. Эрзянь свадьбась неявсь сонензэ прок покш коекс, конасонть кеместэ сюлмавовсь эрзянь раськенть историянзо, эрямонзо ды культуразо.
 Кода сёрмадыль сонсь М.Е. Евсевьев:   
 {{Цитатань ушодома}}
-«Свадьбань поэзиянть мон сёрмадыять Ирина Петровна авам пельде 80 иетнестэ. Симбирской губерниянь Буинской уездэнь М. Кармалы велесэ<ref>Тиринь кель 8 класс. 21 л.</ref>»
+«[[Эрзянь полань саема|Свадьбань]] поэзиянть мон сёрмадыять Ирина Петровна авам пельде 80 иетнестэ. Симбирской губерниянь Буинской уездэнь М. Кармалы велесэ».<ref>Тиринь кель 8 класс. 21 л.{{ref-myv}}</ref>»
 {{Цитатань пе}}
 
-
 Кулось Макар Евсеевич [[1931]] иень [[панжиковонь 10 чи]]стэ, калмазель [[Казань ош]]со. 
-140-иень М.Е. Евсевьевень чачома чистензэ челькезе ульнесь калмазь [[Саранск]]ойсэ.
+140-иень М.Е. Евсевьевень чачома чистензэ челькезе ульнесь калмазь [[Саранск]]ойсэ<ref name="Библиотека Мо">[http://www.lib.e-mordovia.ru/Library/?Char=%C5&id=0 Библиотека Мордовской Литературы: Евсевьев Макар Евсевьевич]{{ref-ru}}</ref>.
 
 == Фотокувт== 
 <gallery>
@@ -45,6 +44,90 @@ Image:Первоначальный учебник русского языка д
 Image:Букварь для мордвы-мокши (М. Е. Евсевьев, 1897).djvu|Мокшонь букварь.Анокстыцязо Макар Евсевьев, нолдазь [[1892 ие]]стэ Казанонь Православиянь Миссионерэнь Вейсэндявксонть. 2-це нолдавкс.
 Image:Эрзянь ёвкст (М. Е. Евсевьев, 1928).djvu|Эрзянь ёвкст. Пурныньде ды нолдыньде Макар Евсевьев [[1928 ие]]стэ.
 </gallery>
+
+== Ловнодо==
+* [https://wikisource.org/wiki/Эрзянь_ёвкст_(М._Е._Евсевьев,_1928) «Эрзянь ёвкст» ([[1928]]) ]
+
+== Библиографиясь ==
+=== М. Е. Евсевьевэнь сёрмадовксозо ===
+'''[[1888 ие]]'''
+* Крещение Руси при святом князе Владимире. На эрзянском наречии мордовского языка (В память 900-летия крещения Руси).- Казань: Изд. ПМО, 1888. — 20 с.
+'''[[1892 ие]]'''
+* Букварь для мордвы-мокши с присоединением молитв и русской азбуки. — Казань: Типо-литогр. Казанского Императорского ун-та, 1892. — 53 с.
+* Букварь для мордвы-эрзи с присоединением молитв и русской азбуки-Казань; Типо-литогр. Казанского Императорского ун-та, 1892. — 47 с.
+* Мордовская свадьба // Живая старина. — СПб., 1892. Кн. 2. Вып. 2. Отд. 2. — С. 98-117.
+* Первоначальный учебник русского языка для мордвы-мокши. — Казань: Изд. ПМО, 1892. — 159 с.
+* Первоначальный учебник русского языка для мордвы-эрзи. — Казань. Изд. ПМО, 1892. — 159 с.
+'''[[1893 ие]]'''
+* Мордовская свадьба // Живая старина. — СПб., 1893. Кн. 3. Вып. 2. Отд. 2. — С.211—219.
+'''[[1894 ие]]'''
+* Букварь для мордвы-эрзи с присоединением молитв и русской азбуки. 2-е изд. — Казань: Типо-литогр. Казанского Императорского ун-та, 1894. — 54 с.
+'''[[1895 ие]]'''
+* Священная история Ветхого завета на эрзянском наречии мордовского языка,- Казань: Изд. ПМО, 1895. — 75 с.
+'''[[1897 ие]]'''
+* Букварь для мордвы-мокши с присоединением молитв и русской азбуки. 2-е изд. — Казань: Типо-литогр. Казанского Императорского ун-та, 1897. — 56 с.
+* Молитвенник на эрзянском наречии мордовского языка. — Казань: Изд. ПМО, 1897. — 16 с.
+* Образцы мордовской народной словесности. Мокшанские песни //Известия ОАИЭ. Т.14. Вып. 1- Казань: Типо-литография Казанского Императорского ун-та, 1897. — 32 с.
+* Первоначальный учебник русского языка для мордвы-мокши. 2-е изд. -Казань: Изд. ПМО", 1897. — 149 с.
+* Первоначальный учебник русского языка для мордвы-эрзи. 2-е изд.- Казань: Изд. ПМО, 1897. — 149 с.
+'''[[1900 год]]'''
+* Священная история Ветхого завета на мокшанском наречии мордовского языка. — Казань: Изд. ПМО, 1900. — 75 с.
+'''[[1914 ие]]'''
+* Братчины и другие религиозные обряды мордвы Пензенской губернии // Живая старина. 1914. Кн. 23. Вып. 1-2. — 44 с.
+* Отчет о командировке в Самарскую и Казанскую губернии для изучения говоров мордовского языка. — Казань, 1914. — 17 л.
+'''[[1923 ие]]'''
+* Тундонь чи / Е. В. Скобелев, М. Е. Евсевьев, Г. К. Ульянов.- М.-Л: ГИЗ, 1923. — 47 с.
+'''[[1925 ие]]'''
+* Мордва Татреспублики // Материалы по изучению Татарстан.- Казань, 1925. Вып. П. — С.179—196.
+* Эрзянь и мокшень кезэрень эрямодост // Якстере теште.- М., 1925. — 21 июля.
+'''[[1928 ие]]'''
+* Основы мордовской грамматики. = Эрзянь грамматика. С прилож. образцов мокшанских склонений и спряжений. — М.: Центриздат, 1928. — 446 с.
+* Эрзянь морот — М.: Центриздат, 1928. — 184 с.
+* Эрзянь ёвкст (скаскат) — М.: Центриздат, 1928. — 137 с.
+'''[[1931 ие]]'''
+* Мордовская свадьба. Ульяновская (б. Симбирская) губерния, село Малые Кармалы Вып. 1.- М.: Центриздат, 1931. — 311 с.
+* Основы мордовской грамматики = Эрзянь грамматика.- 2-е изд., испр.- М.: Центриздат, 1931. — 240 с.
+* Письмо П. В. Шапошникову // Якстере Теште. −1931. — 9 мая.
+* Эрзянь свадьба.-М.: Центриздат, 1931.Вып. 1. — 311 с.
+* Эрзянь-рузонь валке = Мордовско-русский словарь,- М.: Центриздат, 1931. — 227 с.
+'''[[1961 ие]]'''
+* Народные песни мордвы // Избр. труды: В 5 т. — Саранск: Мордов. кн. изд-во, 1961. Т.1. — 384 с.
+'''[[1963 ие]]'''
+* Народные песни мордвы // Избр. труды.: В 5 т. — Саранск: Мордов. кн. изд-во, 1963. Т.2. −527 с.
+* Основы мордовской грамматики // Избр. труды.: В 5 т. — Саранск: Мордов. кн. изд-во, 1963. Т.4. — 472 с.
+'''[[1964 ие]]'''
+* Мордовские народные сказки и загадки // Избр. труды.: В 5 т. — Саранск: Мордов. кн. изд-во. 1964. Т. З. — 411 с.
+* Отчет инструктора мордовского подотдела Наркомнаца М. Евсевьева по командировке его в Чувобласть, Татреспублику и Нижегородскую губернию с 17-го декабря 1921 г. //Сов. Мордовия. 1964,- 31 января.
+'''[[1966 ие]]'''
+* Братчины и другие религиозные обряды мордвы Пензенской губернии // Избр. труды.: В 5 т. — Саранск: Мордов. кн. изд-во, 1966. Т.5. — С.342-384.
+* Мордва Татреспублики // Избр. труды.: В 5 т. — Саранск: Мордов. кн. изд-во, 1966. Т.5. — С.385-407.
+* Мокшанская свадьба. (Вариант первый) // Избр. труды.: В 5 т. — Саранск: Мордов. кн. изд-во, 1966. Т.5. — С.408-427.
+* Мокшанская свадьба. (Вариант второй) // Избр. пруды.: В 5 т. — Саранск: Мордов. кн. изд-ио, 1966. Т.5. — С.428-458.
+* Мордовская свадьба // Избр. труды.: В 5 т. — Саранск: Мордов. кн. изд-во, 1966. Т.5. — С.7-442.
+* Письма // Избр. труды.: В 5 т. — Саранск: Мордов. кн. изд-во, 1966. Т.5. — С. 459—499
+'''[[1975 ие]]'''
+* Мокшанская свадьба селений бывшего Симбирского уезда // Устно-поэтическое творчество мордовского народа: В 8 т. — Саранск, 1975. Т.6 -Ч.2. — С.343—377.
+* Level A.A. Sahmatovhoz // Medveenek a Keleti Finnugor Nepek Irodaalmanak Kistukrc Europa Konyvkiado Budapest, 1975. — C.817-822.
+'''[[1982 ие]]'''
+* Как начинался Нижний Новгород // Легенды и предания Мордвы — Саранск, 1982. — С.61-63.
+* Каменная девушка // Легенды и предания Мордвы — Саранск, 1982. — С.35-36.
+* Предания о царе Тюштяне // Легенды и предания мордвы — Саранск, 1982. — С.51-56.
+'''[[1990 ие]]'''
+* Мордовская свадьба. — Саранск: Мордов. кн. изд-во, 1990. — 384 с.
+
+=== М. Е. Евсевьевэвдэ литературась ===
+* ''Беззубов В. И.'' Документы о жизни и научной деятельности М. Е. Евсевьева. Саранск, 1950.
+* ''Беззубов В. И.'' Научно-педагогическая деятельность Макара Евсевьевича Евсевьева. — Саранск: Мордов. кн. изд., 1960.
+* ''Бибин М. Т., Осовский Е. Г.'' Макар Евсевьевич Евсевьев // Просветители и педагоги Мордовского края. — Саранск: Мордов. кн. изд-во, 1986. — С.45-59.
+* ''Бибин М. Т., Осовский Е. Г.'' Макар Евсевьевич Евсевьев — первый мордовский учёный, просветитель и педагог. (В помощь лектору). — Саранск, 1988.
+* ''Воробьев Н. И.'' Макар Евсевьевич Евсевьев // СЭ. 1931. № 3/4. С. 187—189.
+* ''Жиганов М. Ф.'' М. Е. Евсевьев — историк родного края. — Саранск: Мордов. кн. изд-во, 1990.
+* Научное наследие М. Е. Евсевьева и современность: Межвузовский сб. науч. трудов. Саранск, 1992.
+* Научное наследие М. Е. Евсевьева в контексте национального просвещения Поволжья. — Саранск, 2004.
+* М. Е. Евсевьев: Жизнь мордвы в фотографиях: Фотоальбом. Сост. А. С. Лузгин и др. Саранск, 2004.
+* ''Осовский Е. Г., Зеткина И. А.'' Макар Евсевьевич Евсевьев: просветитель, учёный, педагог / Мордов. гос. пед. ин-т. — Саранск: Тип. «Крас. Окт.», 2003. — 172 с.
+* ''Шахматов А. А.'' О работах М. Е. Евсевьева // Отчет Императорского Русского Географического общества за 1915 г. М., 1916. С. 72—74.
+
 
 ==  Лисьмапря ==
 <references />
