*Empty MediaWiki Message*

--- a/Эрзянь_полань_саема.mw
+++ b/Эрзянь_полань_саема.mw
@@ -2,7 +2,7 @@
 
 Эсь эрямонь малав ведьгемень иетнень [[Евсевьев, Макар Евсевьевич|М.Е. Евсевьев]] алтынзе фольклоронь пурнамонь пек эрявикс тевентень ды тень пингстэ сехте покш мель явсь свадьбантень. Кода корты сонсь М. Е. Евсевьев:{{Цитатань ушодома}}''«Свадьбань поэзиянть мон сёрмадыя Ирина Петровна авам пельде 80 иетнестэ. 
 Симбярской губерниянь Буинской уездэнь М. Кармалы велесэ».''{{Цитатань пе}}
-Седе тов, те пурнавксонть поладызеть лия материалтнэсэ, конань пурнындэ фольклоронь экспедициятнесэ 38 эрзянь велетнэстэ. Полань саема коесь  евтни кезэрень шкань эрямодонть, сеть лиякстоматнеде, конат тейневсть пингеде пингес, свадьбась малав педе пес моли одирьванть перька. Урнематнесэ евтавить одирьванть обуцязо ды мелявксонэо. Пек стака явомс тетянзо-аванзо эйстэ. Одирьвась урни свадьбадо икеле, свадьбань чистэ ды лиясто свадьбадо мейлеяк. Урнемат, морот, парянтнемат, пазморот совить свадьбань лирикас. Эрзянь раськесь свал ванстась поэтической сюпавчинзэ.
+Седе тов, те пурнавксонть поладызеть лия материалтнэсэ, конань пурнындэ фольклоронь экспедициятнесэ 38 эрзянь велетнэстэ. Полань саема коесь  евтни кезэрень шкань эрямодонть, сеть лиякстоматнеде, конат тейневсть пингеде пингес, свадьбась малав педе пес моли одирьванть перька. Урнематнесэ евтавить одирьванть обуцязо ды мелявксонэо. Пек стака явомс тетянзо-аванзо эйстэ. Одирьвась урни свадьбадо икеле, свадьбань чистэ ды лиясто свадьбадо мейлеяк. Урнемат, морот, парянтнемат, пазморот совить свадьбань лирикас. Эрзянь раськесь свал ванстась поэтической сюпавчинзэ. «Эрзянь свадьба» книгась ульнесь нолдазь [[1931]]-це<ref name="ГТРК «Мордовия»">[http://mordoviatv.ru/m-e-evseveven-erzyan-svadba-knigan-yubileenten-k-yubileyu-knigi-erzyanskaya-svadba-m-e-evseveva-erzya/ ФГУП ГТРК «Мордовия» М.Е.Евсевьевень «Эрзянь свадьба» книгань юбилеентень. ]{{ref-myv}}</ref> иестэ.
 
 == Полань саемась, али мирденень лисемась ==
 # [[Ладямо|Ладямо]]
