--- a/Глухов,_Петр_Семенович.mw
+++ b/Глухов,_Петр_Семенович.mw
@@ -7,7 +7,7 @@
  |артовксонть эйсте = 
  |важодема ёрокчизе     =  [[Эрзянь кель|эрзянь]] кельсэ содавикс сёрмадей
  |чачома чись          = 26.12.1897
- |чачома тарка         = {{ЧачомаТарка|Вишка Крамаль веле}}, {{ЧачомаТарка|Батырьбуень}}, {{ЧачомаТарка|Ветькень Республикась|Ветькень Масторс}}
+ |чачома тарка         = {{ЧачомаТарка|Цярмун веле||Цярмун (Ветькень Республика)}}, {{ЧачомаТарка|Батырьбуень}}, {{ЧачомаТарка|Ветькень Республикась|Ветькень Масторс}}
  |гражданчи            = {{Масторкоцт|Россиянь Империя}}<br /> {{Масторкоцт|СССР}}
  |подданство           = 
  |кулома чись          = 07.02.1979
@@ -22,9 +22,9 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Глуховонь Петр Семенович''' ([[1897 ие]]ень  Вишка Крамаль веле — [[1979 ие]]нь [[даволковонь 7 чи]]стэ [[Магнитогорск ош]] ) — [[Эрзянь кель|эрзянь]] кельсэ содавикс сёрмадей.
+'''Глуховонь Петр Семенович''' ([[1897 ие]]ень Цярмун веле — [[1979 ие]]нь [[даволковонь 7 чи]]стэ [[Магнитогорск ош]] ) — [[Эрзянь кель|эрзянь]] кельсэ содавикс сёрмадей.
 
-Чачсь Пётр Глухов [[1897 ие]]ень [[ацамковонь 26 чи]]стэ Симбирской губерниянь Буинской уездэнь (неень [[Ветькень Республикась|Ветькень Масторсо]] [[Батырьбуе|Батырьбуесэ]]) Вишка Крамаль [[эрзя]]нь<ref>Петр Семенович Глухов. Чачома чистэнзэ 110 иетненень // «Сятко». – 2007. – № 12. – С. 69-79. {{ref-myv}}</ref> велесэ ({{lang-ru|Малые Кармалы}}) сокицянь-видицянь семиясо. Вишка порасто кадовсь тетявтомо, трицякс-кастицякс тензэ ульнесь аванзо лелясь [[Евсевьев, Макар Евсевьевич|Макар Евсевьев]].
+Чачсь Пётр Глухов [[1897 ие]]ень [[ацамковонь 26 чи]]стэ Симбирской губерниянь Буинской уездэнь (неень [[Ветькень Республикась|Ветькень Масторсо]] [[Батырьбуе|Батырьбуесэ]])  [[Цярмун (Ветькень Республика)|Цярмун]] [[эрзя]]нь<ref>Петр Семенович Глухов. Чачома чистэнзэ 110 иетненень // «Сятко». – 2007. – № 12. – С. 69-79. {{ref-myv}}</ref> велесэ ({{lang-ru|Малые Кармалы}}) сокицянь-видицянь семиясо. Вишка порасто кадовсь тетявтомо, трицякс-кастицякс тензэ ульнесь аванзо лелясь [[Евсевьев, Макар Евсевьевич|Макар Евсевьев]].
 
 1916 иестэ прядызе Казанонь тонавтыцянь семинариянть, 1930 иестэ — Московонь промыслань-экономикань институтонть. 1926 - 1927 иетнестэ ульнесь прят-редакторокс «Якстере теште» кулялопанть ({{lang-ru|«Красная звезда»}}). 
 1931 иестэ эрясь Магнитогорск ошсо, оймсемас-пенсияс туемадонть икеле важодсь металлургонь комбинатсо.
