--- a/Чапамо_ловцо.mw
+++ b/Чапамо_ловцо.mw
@@ -1,4 +1,4 @@
-[[Артовкс:Чапамо ловце.jpeg|thumb|200px]]
+[[Артовкс:Chapamo lovco.jpg|thumb|200px|«Чапамо ловцо». Эрзянь алкусонь симемапель кона микшневи лавкассо.]]
 '''Чапамо ловцо'''нть теить ламбамо ловцонть куватьс <abbr title="духовкасо">каштомсо</abbr> а пек покш температурасо нолдамодо (аштемадо-пиемадо) мейле. Зярдо нолдань ловцось седе тустоми, полавтсы тюсонзо тюжала ёнов, аламнеде скими икеленсенть коряс сонзэ эряви кельмевтемс кудонь температурас, теде мейле тов каить зярыя (мелень коряс) велькс эли чапамо ловцо ды кедьгенть кадсызь лембе таркас чапаськалеме. Вень ютазь кедьгесь путови мацтс эли <abbr title="холодильникс">кельмепарьс</abbr>.
 седе пидезекс, зярс лангост а тееви седе мазыйкс. Ярсадо паро мельсэ - пиледе а усковтадо те ярсамопельденть.
 
