*Empty MediaWiki Message*

--- a/Маризь_Кемаль.mw
+++ b/Маризь_Кемаль.mw
@@ -31,6 +31,8 @@
 
 [[1985]] иестэ саезь [[1988]] видс — поэзиянь прявтонть полавтыця «[[Сятко (журнал-ковставкс)|Сятко]]» журналсонть, [[1989]] иестэнть саезь течи чинть видс важоди секретарекс [[«Чилисема» (журнал)|«Чилисема»]] эрзянь эйкакшонь журналсонть.
 == Сёрмадовксонзо ==
+[[Артовкс:Marizj Kemalj dy Natalj Tushnikova.jpg|thumb|left|350px|Валморозей Маризь Кемаль ды Тушникова Наталь. Неень шкань теезь, алкуксонь [[эрзянь оршамопель]]сэ, конат анокстызь сынсь. [[Раськень Озкс]], [[Чукал веле (Покш Игнадбуе)|Чукал веле]], [[Покш Игнадбуе]]. [[2016 ие]]нь [[медьковонь 9 чи]].]]
+
 Васенце валморонзо лисемась путови [[1980]] иентень. Умарьковонь номерсэнть «Сятко» журналонть ульнесь печатазь «Эйкакшчинь лавсь» [[валморо]]зо. Секе шкастонть кармась улеме эрьва [[ие]]нь од ломанень литераторонь семинартнэсэ. «Сятко» журналось кармась макснеме сонзэ валморонзо. [[1987]] иестэ лись ниле сёрмадеень пурнавкс «Маней васолкст», ков совасть Маризь Кемалень покш кочкавкс валморонзо. [[1988]] иестэ Мордовиянь книгань нолдамокудось-издательствась нолдынзе сонзэ васенце пурнавксонзо «Лавсь».
 
 Омбоце пурнавксозо лиссь [[1994]] иестэ «Штатол» лем ало, сонзэ эйсэ валморыцясь арсесь эрямодонть, вечкемадонть, кезэрень [[эрзят|эрзянь раськеденть]]. Тей совась виев, парсте сёрмадозь поэмазо «Мон — эрзян!», конасонть Маризь Кемаль сти ловныцятнень икеле ломанекс, конань теевсь-путовсь эсь раськенть вечкемась, пертьпельксэсь ды эрямоёжось.
