--- a/Раськень_Озкс.mw
+++ b/Раськень_Озкс.mw
@@ -147,6 +147,7 @@
 
 == Озксось ушодови ==
 === Эрзятне совить Маркужов ===
+[[Артовкс:Marizj Kemalj dy Natalj Tushnikova.jpg|thumb|350px|Валморозей [[Маризь Кемаль]] ды Тушникова Наталь. Неень шкань теезь, алкуксонь [[эрзянь оршамопель]]сэ, конат анокстызь сынсь. [[Раськень Озкс]], [[Чукал веле (Покш Игнадбуе)|Чукал веле]], [[Покш Игнадбуе]]. [[2016 ие]]нь [[медьковонь 9 чи]].]]
 Окойники весе тораматне серьгедить эсь гайтьсэст, озксов сыцятне пуромить теить коло Инепазштатолонть перька. Маркужонть ниле ёнкстнэстэ (чилисема, чиньэле, чивалгома, пелеве) покш мазылгавтозь торо марто молить куншкас ниле цёрат, сынь панжить виень, эрьмень, эрямонь ниле ёнкстнэнь, пачкодить ды токавтсызь торотнень штатолонть велькссэ . 
 
 === Инепазоньштатолонть кирвастямось ===
