*Empty MediaWiki Message*

--- a/Покш_Толкан_веле_(Похвистнева_буень).mw
+++ b/Покш_Толкан_веле_(Похвистнева_буень).mw
@@ -83,6 +83,7 @@
 == Содавикс ломанть те велестэнть ==
 Покш Толкан велесэ чачсть:
 * И. Н. Бузуев<ref>[http://pohgor.ru/ourcity/bestpeople/bestpeople_161.html Сайи ГО Похвистнево. Лучшие люди города. {{Ref-ru}}]</ref> — агроном 
+*  [[Дуняшин, Алексей Васильевич|Алексей Дуняшин]]<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref>—  эрзянь прозаик, публицист, критик.
 * [[Журавлёвонь, Числав Григорьевич|Числав Журавлёв]]<ref name="finugor.ru">[http://finugor.ru/news/erzyanskiy-poet-chislav-zhuravlyov-k-dnyu-rozhdeniya-predstavil-svoe-tvorchestvo-v-internete finugor.ru Эрзянский поэт Числав Журавлёв к дню рождения представил свое творчество в Интернете{{Ref-ru}}]</ref> — [[Эрзя|эрзянь]] сёрмадей ды валморозей.
 * [[Кавтаськин, Лука Семенович|Л. С. Кавтаськин]]<ref>[http://fulr.karelia.ru/Resursy/Sozdateli_nacionalnyh_finno-ugorskih_literatur_i_folklora/Luka_Semenovich_Kavtaskin/ Финно-угорские библиотеки России // Лука Семенович КАВТАСЬКИН. Республика Мордовия {{Ref-ru}}]</ref> — ученой, тонавтыця, фольклоронь пурныця
 * А. И. Колесова, Р. А. Пыряева<ref>[http://oktobers.moy.su/index/0-7 ГБОУ Самарской области СОШ пос. Октябрьский ГО Похвистнево Самарской области ПРОЙДЕН  ПУТЬ, ДОСТОЙНЫЙ  ДОБРЫХ  СЛОВ.{{Ref-ru}}]</ref>  — тонавтыцят
