--- a/Боров,_Михаил_Романович.mw
+++ b/Боров,_Михаил_Романович.mw
@@ -22,10 +22,10 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Миша Боров''' ([[ 1896 ие]]стэ [[Самарань ёнкс|Самарань ёнкс]] [[Похвистневань буе Самарань ёнксcо|Похвистневань буе]]нь [[Якстере Лисьмапрят (Похвистнева буень)|Якстере Лисьмапрят велесэ]] - [[1941 ие]]стэ [[панжиковонь 29 чи]] [[Киев ош]]со ) — бороциця, васенце чемпион Советень Россиянь профессиональной бороцицятьнень (классической стильсэ). [[Эрзя]].
+'''Миша Боров''' ([[ 1896 ие]]стэ [[Самарань ёнкс|Самарань ёнкс]] [[Похвистневань буе Самарань ёнксcо|Похвистневань буе]]нь [[Якстере Лисьмапрят (Похвистнева буень)|Якстере Лисьмапрят велесэ]] - [[1941 ие]]стэ [[панжиковонь 29 чи]] [[Киев ош]]со ) — бороциця, васенце чемпион Советень Россиянь профессиональной бороцицятьнень (классической стильсэ). [[Эрзя]]<ref name="«Эрзянь Мастор»" />.
 
 ==Эстедензэ==
-Чачсь Михаил Боров [[1896 ие]]стэ [[Самарань ёнкс|Самара ёнксонь]], [[Похвистневань буе Самарань ёнксcо|Похвистневань буе]]се Якстере Лисьмапрят эрзянь велесэ. [[XIX пинге|XIX]] прядовомсто тесэ эрясть Роман ды Евдокия Боровтне. Сынст ульнесть 5 эйкакшост: Яков, Григорий, Матрена, Никита ды Михаил. Яков ды Михаил ульнесть сехте покштнэ – кавто метрадо седе сэрейть. 
+Чачсь Михаил Боров [[1896 ие]]сэ [[Самарань ёнкс|Самара ёнксонь]], [[Похвистневань буе Самарань ёнксcо|Похвистневань буе]]се Якстере Лисьмапрят<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref> эрзянь велесэ. [[XIX пинге|XIX]] прядовомсто тесэ эрясть Роман ды Евдокия Боровтне. Сынст ульнесть 5 эйкакшост: Яков, Григорий, Матрена, Никита ды Михаил. Яков ды Михаил ульнесть сехте покштнэ – кавто метрадо седе сэрейть. 
 
 Тетязо Роман Дмитриевич ульнесь сэрей (малав 2 метрат ды 15 сантиметрат), обуцянь коряс сэтьме ды арсиця. Авазояк, Евдокия Васильевна – Олда, кода эрзякс мерильть сонензэ, ульнесь тетянть коряс. Авась свал кандтнесь викшнезь эрзянь оршамот ды карксазь пулай. Олда свал морсиль эрзянь морот. Эрзянь аванть ванькс вайгеленть кунсолокшнось весе велесь… Аванзо ёндо Бережковтнэ истяжо шумбральть. Мишань тренерэзэ Ф. Лавренов сёрмадсь: {{Цитатань ушодома}}«Михаилонь дедазо тельня потпанарсо лисиль банянь уштомо ды кепе ютыль баняв парямо ды банястояк – кепе. Мон Мишанень кортан: «Сон превстэ лись?», а Миша ёвтыль: «Минек весе истя теить…»{{Цитатань пе}}Весе Боровтне ульнесть паро ломанекс ды сеедьстэ лездыльть стака важодемасо велесэ ломантнененьгак.
 
@@ -40,6 +40,10 @@
 Церанть кастызь эрзянь масторось ды эрзянь койтне. Вана истямоль минек эрзянь виесь! Се шкасто саезь эрзятне кортыть: «Миша Боров – сехте здоров! Истямо шумбрачи марто ломанть мастор лангось эзь нейне ды, паряк, зярдояк а неияк. Ды сон ульнесь минек, эрзянь.
 
 Кулось Миша Боров [[1941 ие]]нь [[панжиковонь 29 чи]]сте  [[Киев ош]]со, калмазь Байковонь калмазырьсе.
+
+
+==  Лисьмапря ==
+<references />
 
 [[Категория:Ломанть|Б]]
 [[Category:Эрзянь Ине ломанть|Б]]
