*Empty MediaWiki Message*

--- a/Моро_Артур.mw
+++ b/Моро_Артур.mw
@@ -23,7 +23,7 @@
  |википурнавкс         = 
 }}
 {{Лия смустьтне|Моро (смустьтне)}}
-'''Моро Артур''' ({{lang-ru|Афанасий Матвеевич Осипов}}) ([[1909 ие]]нь [[панжиковонь 11 чи]]стэ [[Самара ёнкс|Самарань ёнксонь]] Похвистневань буень [[Якстере Лисьмапрят (Похвистнева буень)|Якстере Лисьмапрят велесэ]] - [[1989 ие]] [[якшамковонь 13 чи]] [[Москов ош|Московсо]]) — [[Эрзя|эрзянь]]<ref>[http://www.nbrkomi.ru/page/2925/ Национальная библиотека Респубоики Коми: Моро (Осипов) Артур Матвеевич]{{ref-ru}}</ref> валморонь ладсий.
+'''Моро Артур''' ({{lang-ru|Афанасий Матвеевич Осипов}}) ([[1909 ие]]нь<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref> [[панжиковонь 11 чи]]стэ [[Самара ёнкс|Самарань ёнксонь]] Похвистневань буень [[Якстере Лисьмапрят (Похвистнева буень)|Якстере Лисьмапрят велесэ]] - [[1989 ие]] [[якшамковонь 13 чи]] [[Москов ош|Московсо]]) — [[Эрзя|эрзянь]]<ref>[http://www.nbrkomi.ru/page/2925/ Национальная библиотека Респубоики Коми: Моро (Осипов) Артур Матвеевич]{{ref-ru}}</ref> валморонь ладсий.
 
 ==Эрямо пингезэ==
 Чачсь Якстере Лисьмапрят велесэ [[Похвистневань буе Самарань ёнксcо|Похвистневань буень]] Самарань ёнкссо сокиця-видицянь семиясо. Тетязо нужачиденть тукшнось Сибирев, важодекшнесь сюпав ломань кедьгак, чугункань ки лангсояк. В 1925 иестэ А. Моро  туи [[Москов]]ов. [[Глухов, Петр Семенович|Глуховонь Петрань]] (кона ульнесь эрзянь [[«Якстере теште» (кулялопа)»|«Якстере теште» кулялопанть]] прявт-редакторокс) лездамонзо коряс Моро пряды Фабрикань-заводонь тонавтнеманть. Теде мейле сонзэ саизь важодеме текстэнь пурныцякс СССР-нь раскень Центриздатов.
