*Empty MediaWiki Message*

--- a/Якстере_Лисьмапрят_(Похвистнева_буень).mw
+++ b/Якстере_Лисьмапрят_(Похвистнева_буень).mw
@@ -67,19 +67,19 @@
 
 == Содавикс ломанть те велестэнть ==
 Якстере Лисьмапрят велесэ чачсть:
-* [[Боров, Михаил Романович|Михаил Романович Боров]] (1896—1941) — бороциця, васенце чемпион Советень Россиянь профессиональной бороцицятьнень ютксо.
-* [[Волженский, Александр Васильевич|Александр Васильевич Волженский]] (р. 1899) — советэнь учёной
+* [[Боров, Михаил Романович|Михаил Романович Боров]]<ref name="«Эрзянь Мастор»" /> (1896—1941) — бороциця, васенце чемпион Советень Россиянь профессиональной бороцицятьнень ютксо.
+* [[Волженский, Александр Васильевич|Александр Васильевич Волженский]] (ч. 1899) — советэнь учёной
 * [[Кавтаськин, Андрей Семёнович]] — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
-* [[Лукьянов, Алексей Миронович|Лукьянов Алексей Миронович]] —  эрзянь кельсэ сёрмадей, валморонь ладсий, прозаик, куляньсёрмадей. 
-* [[Чувашов, Михаил Иванович|Михаил Иванович Чувашов]] (р. 1909) —  эрзянь фольклоронь пурныця, этнограф.
-* [[Артур Моро]] (1909—1989) — [[Эрзя|эрзянь]] сёрмадей ды валморозей
-* [[Ревизов, Николай Егорович|Николай Егорович Ревизов]] (1927—2004) — эрзянь куляньсёрмадей, фотоартыця, валморозей.
+* [[Лукьянов, Алексей Миронович|Лукьянов Алексей Миронович]]<ref name="«Эрзянь Мастор»" /> —  эрзянь кельсэ сёрмадей, валморонь ладсий, прозаик, куляньсёрмадей. 
+* [[Чувашов, Михаил Иванович|Михаил Иванович Чувашов]]<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref> (1909 - 1973) —  эрзянь фольклоронь пурныця, этнограф.
+* [[Артур Моро]]<ref name="«Эрзянь Мастор»" /> (1909—1989) — [[Эрзя|эрзянь]] сёрмадей ды валморозей
+* [[Ревизов, Николай Егорович|Николай Егорович Ревизов]]<ref name="«Эрзянь Мастор»" /> (1927—2004) — эрзянь куляньсёрмадей, фотоартыця, валморозей.
 
 ==Веленть эрямозо==
 Якстере Лисьмапрят велесь ульнесь стявтозь-путозь «Сюлгамо» туристэнь якамо кис<ref>Нехаева Н.Е. Межрегиональный этнический маршрут как инновационный туристский продукт / Н.Е. Нехаева, Е.Н. Гуркина // Инновации в науке. — 2014. — №31-2. — С.119-124. {{ref-ru}}</ref>.
 
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
