--- a/Батаевень,_Павел_Петрович.mw
+++ b/Батаевень,_Павел_Петрович.mw
@@ -22,10 +22,10 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Батаевень Павел Петрович''' ([[1915]] иестэ [[Самарань ёнкс|Самарань ёнксонь]] [[Од Пиче веле (Самарань ёнкссо)|Од Пиче]] велесэ ) — [[Эрзя|эрзянь]] валморонь ладсий.
+'''Батаевень Павел Петрович''' ([[1915]] иестэ [[Самарань ёнкс|Самарань ёнксонь]] [[Од Пиче веле (Самарань ёнкссо)|Од Пиче]] велесэ ) — [[Эрзя|эрзянь]] валморонь ладсий, куляньсёрмадей<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref>.
 
 == Эстедензэ ==
-Павел Батаев чачсь сокиця-видицянь семиясо [[Клявлянь буе Самарань ёнкссо|Клявлянь буень]] [[Од Пиче веле (Самарань ёнкссо)|Од Пиче]] велесэ. Пек рана сонзэ кулось авазо, уроз цёрынесь [[9 (ловома вал)|9]] иестэ кармась стадань ваномо. Зярдо сонензэ топодсть [[12 (ловома вал)|12]] иеть, сон тусь [[Москов ош|Московов]] ды тосо эйкакшнеде Советень правительствань заботань лескэнть вельде кармась тонавтнеме куншка школасо, конань прядызеть [[17 (ловома вал)|17]] [[ие|иесэ]]. Теде мейле сон одов сась тиринь буев, ды кувать важодсь буень кулялопанть редакциясо. Тосо жо ушодсь валморонь сёрмадомо, конатнеде ламо печатазь секе кулялопасонть.
+Павел Батаев чачсь сокиця-видицянь семиясо [[Клявлянь буе Самарань ёнкссо|Клявлянь буень]] [[Од Пиче веле (Самарань ёнкссо)|Од Пиче]] велесэ<ref name="«Эрзянь Мастор»" />. Пек рана сонзэ кулось авазо, уроз цёрынесь [[9 (ловома вал)|9]] иестэ кармась стадань ваномо. Зярдо сонензэ топодсть [[12 (ловома вал)|12]] иеть, сон тусь [[Москов ош|Московов]] ды тосо эйкакшнеде Советень правительствань заботань лескэнть вельде кармась тонавтнеме куншка школасо, конань прядызеть [[17 (ловома вал)|17]] [[ие|иесэ]]. Теде мейле сон одов сась тиринь буев, ды кувать важодсь буень кулялопанть редакциясо. Тосо жо ушодсь валморонь сёрмадомо, конатнеде ламо печатазь секе кулялопасонть.
 
 1933 иестэ Батаев сась [[Саран ош|Саранов]] ды кармась важодеме васня Мордовской государственной Издательствасо, мейле «Ленинэнь киява» комсомолонь кулялопасо. Кода лецтнесть вейсэважодицятьне Павел Петрович ульнесь вадряседеень, весёла ды ёжов-важововикс ломанекс, тевень топавтыцякс ды дошлоекс. Тесе сон ламо важодсь эсинзе литературной сёрмадовксонзо ланксо, вастневсь содавикс се шкасто валморозейтнень марто: [[Григошин Я.|Я. Григошинень]], И. П. Кривошеевень, [[Никул Эркай|Никул Эркай]]. Тесэ сон сёрмадыньзе эсензэ сехте виев  валморонзо. 
 
