*Empty MediaWiki Message*

--- a/Кадышень,_Надежда_Никитична.mw
+++ b/Кадышень,_Надежда_Никитична.mw
@@ -22,7 +22,7 @@
  |вальма                = http://www.kadisheva.ru
  |википурнавкс         = 
 }}
-'''Кадышень Надежда''' ({{lang-ru|Кадышева Надежда Никитична}}, [[1959]] [[аштемковонь 1 чи]] Горки ) — содавикс [[эрзя]]нь тейтерь-авась, Россиянь раськень артисткась, эстрадонь фолк-роконь морыця, «Сырьнень суркс» морамо кужонть васенце морыцязо.
+'''Кадышень Надежда''' ({{lang-ru|Кадышева Надежда Никитична}}, [[1959]] [[аштемковонь 1 чи]] Горки ) — содавикс [[эрзя]]нь тейтерь-авась<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref>, Россиянь раськень артисткась, эстрадонь фолк-роконь морыця, «Сырьнень суркс» морамо кужонть васенце морыцязо.
 
 == Эрямопигезэ ==
 Надежда Никитична чачсь [[1959]] иень [[аштемковонь 1 чи]]стэ [[Татаронь Республикась|Татаронь ёнксонь]] [[Лениногорскоень буень]] Горки велесэнть. Ансяк сонзэ эйкакш пингезэ кеместэ сюлмавсь теке ёнксонь Ташто Макалейужо (Ташто Маклауш) веленть марто. Те велесь ашти [[Самара ёнкс|Самарань]], [[Оренбургонь ёнкс|Оренбургонь ёнксснень]] ды [[Татаронь Республикась|Печкасонь Масторонь]] вейкест-вейкест эйстэ маласо аштиця таркасонть.
@@ -36,6 +36,8 @@
 Течинь чине Россиясо арась истямо ломань, конась бу аволизе сода Надежда Кадышевань лемензэ. Сонзэ моронзо гайгить эрьва кодамо кецямонь покшчисэ, кафесэ, ярсамо таркасо, телевизорсто, радиосо ды лия эрьва кодамо таркатнесэ. Миненек, эрзянь ломантненень, те покштояк покш мельспаро ды каштанчи. Эдь Надежда лиссь эрзянь раськенть пельде. Сави меремс, [[эрзянь кель|тиринь келензэ]] Надежда Никитична эзизе стувто течинь чис. Сон аволь ансяк вадрясто корты эрзянь кельсэ, натой морыяк. Кадышева ламоксть сакшнось Мордовияв, косо сонзэ свал вастасть пек лембестэ ды паро мельсэ. Кемтяно, маласо шкастонть тиринь артисткась таго сы Мордовияв ды кази тесэнь эрицятненень вадрядояк вадря, седейшкавань, мельстуиця морот.
 
 
+== Лисьм.: ==
+<references />
 
 [[Category:Культура]]
 [[Category:Эрзят|К]]
