*Empty MediaWiki Message*

--- a/Дуняшин,_Алексей_Васильевич.mw
+++ b/Дуняшин,_Алексей_Васильевич.mw
@@ -23,14 +23,14 @@
  |википурнавкс         = 
 }}
 
-'''Дуняшин Алексей Васильевич''' ([[1904 ие]]нь [[даволковонь 8 чи]]стэ  [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистнева буе]]нь [[Покш Толкан веле (Похвистнева буень)|Покш Толкан]] велесэ) — [[Эрзя|эрзянь]]<ref name="liveinternet.ru">[http://www.liveinternet.ru/users/bremer/post229568158 8 ФЕВРАЛЯ РОДИЛСЯ...]{{Ref-ru}}</ref> сёрмадей<ref name="ЯГИНА А.">[http://journal.mrsu.ru/arts/zhanrovo-tematicheskijj-sostav-mordovskojj-pechati-perioda-ee-stanovleniya-po-stranicam-ehrzyanskojj-pressy-1920-kh-godov Ягина А. Н. Жанрово-тематический состав мордовской печати периода ее становления (по страницам эрзянской прессы 1920-х годов) // Огарев-online. – 2014. – №5.]{{Ref-ru}}</ref>, фельетонист, валморозей, публицист<ref name="Национальная библиотека">[http://www.library.saransk.ru/actions/?ELEMENT_ID=752 «Национальная библиотека им. А.С. Пушкина РМ» Информационный листок «Журналист, писатель»: к 110-летию со дня рождения А. В. Дуняшина]{{Ref-ru}}</ref>, ды куляньсёрмадей.
+'''Дуняшин Алексей Васильевич''' ([[1904 ие]]нь [[даволковонь 8 чи]]стэ  [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистнева буе]]нь [[Покш Толкан веле (Похвистнева буень)|Покш Толкан велесэ]]<ref name="«Эрзянь Мастор257»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref> - [[1931 ие]]стэ) — [[Эрзя|эрзянь]]<ref name="liveinternet.ru">[http://www.liveinternet.ru/users/bremer/post229568158 8 ФЕВРАЛЯ РОДИЛСЯ...]{{Ref-ru}}</ref> сёрмадей<ref name="ЯГИНА А.">[http://journal.mrsu.ru/arts/zhanrovo-tematicheskijj-sostav-mordovskojj-pechati-perioda-ee-stanovleniya-po-stranicam-ehrzyanskojj-pressy-1920-kh-godov Ягина А. Н. Жанрово-тематический состав мордовской печати периода ее становления (по страницам эрзянской прессы 1920-х годов) // Огарев-online. – 2014. – №5.]{{Ref-ru}}</ref>, фельетонист, валморозей, публицист<ref name="Национальная библиотека">[http://www.library.saransk.ru/actions/?ELEMENT_ID=752 «Национальная библиотека им. А.С. Пушкина РМ» Информационный листок «Журналист, писатель»: к 110-летию со дня рождения А. В. Дуняшина]{{Ref-ru}}</ref>, ды куляньсёрмадей.
 
 == Эстедензэ ==
 Семияст аволь покшоль, эрясть вадрясто. Тетязо, Василий Фролович, содыль сёрмас, бажась тонавтомс эйкакшонзояк. Алёша Дуняшин прядызе ушодкс школанть Шнамо Конев марто. Ульнесь веленькулянь сёрмадеекс, сёрмадовксонзо лиснесть Бугурусланонь, Самарань («Коммуна»), ды московонь «Беднота» кулялопатнесэ. 1926 иень [[сёксь|сёксня]] тусь тонавтнеме Московонь государствань журналистикань институтсо.  Теке иестэ лись васенце ёвтнемазо. Тонавтнеманзо прядызе 1928 иестэ.
 
 А. В. Дуняшинэнь эрямо шкасто Россиянь историясь ульнесь даволонь шкакс. Сон ютась А. В. Дуняшинэнь эрямонзо пачкаяк. Ульнесь гражданской войнасо, мейле ветясь культурно-содамочинь ды тевс тердемань важодема А. В. Дуняшинэнь шкинема шказо нурькинель. Тень лангс апак вано, кадсь редявикс тешкс эрзянь журналистикантень, публицистикань ды художествань литературантень. Сёрмадомо кармась 1923 иестэ рабфаксо тонавтнемстэ. Сонзэ тешкстнэ-редявкстнэ, фельетонтнэ, ёвтнематне сеетьстэ лиснильть «Якстере теште» газетасонть. Сон парсте содылинзе эрзятнень эрямост, сынст обуцяст, мелест-бажамост, коест. Московсо А. В. Дуняшин важодсь «Якстере теште» газетань редакциясо секретарекс. 
 
-Кулялопань редакторось [[Глухов, Петр Семенович}Пётр Глухов]] сёрмадсь А. В. Дуняшиндэ<ref name="«Эрзянь Мастор»">«Эрзянь Мастор», 257-це №, Т. Ф. Сафонова, Кундасынек чачома чист марто валдо ойме ломантнень лемест: Дуняшин Алексей Васильевич {{Ref-myv}}</ref>: 
+Кулялопань редакторось [[Глухов, Петр Семенович|Пётр Глухов]] сёрмадсь А. В. Дуняшиндэ<ref name="«Эрзянь Мастор»">«Эрзянь Мастор», 257-це №, Т. Ф. Сафонова, Кундасынек чачома чист марто валдо ойме ломантнень лемест: Дуняшин Алексей Васильевич {{Ref-myv}}</ref>: 
 {{Цитатань ушодома}}«А пек сэрей, ловтаня чама, оршазь раужо пиджаксо – истямоль лангс ванозь Алексей Дуняшин. Ялганзо мерильть тензэ Алёша. Эстензэ пек вечкевсь Алеко лемесь, секскак сеетьстэ сёрмадыль Алек Дуняшин… Дуняшинэнь сёрмадовкстнэнь эйстэ монень весемеде пек вечкевильть фельетонтнэ. Сынь сёрмадозь, кода кортыть, пек пшти кельсэ. Эряви меремс, што сондензэ икеле «Якстере теште» газетасонть сёрмадыцят арасельть. Секс лован, што эрзянь журналистикасонть Дуняшин ульнесь васенце фельетонистэкс».{{Цитатань пе}}
 
 
