--- a/Самара_ёнкс.mw
+++ b/Самара_ёнкс.mw
@@ -69,7 +69,31 @@ MSKS=+1|
 * [[Шигононь буе Самарань ёнксcо|Шигононь буе]] ({{lang-ru|Шигонский район}})
 * [[Якстереармиянь буе Самарань ёнксcо|Якстереармиянь буе]] ({{lang-ru|Красноармейский район}})
 
-== Сёрм.: ==
+== Самара ёнксонь содавикс эрзятне<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref>== 
+# Петрова Ксения Семёновна (1892, Бугуруслан ош, Самарань губ. - 1942, Ташто Пиче веле, Клявля буень, Куйбышевэнь ёнкс). Драматург.
+#  Дорогойченко (Дорогойченков) Алексей Яковлевич (1894 -1947). Прозаик, валморозей, публицист, критик.
+#  [[Боров, Михаил Романович|Боров Михаил Романович]] (1896, [[Якстере Лисьмапрят (Похвистнева буень)|Архангельские Ключи]] Самарань губ. - 1941, Киев ош). Эрзянь бороциця, Россиянь чемпион.
+#  Дмитрий Морской (Малышев Дмитрий Ивановичень) (1897 - 1956). Эрзянь валморозей, прозаик.
+#  [[Дуняшин, Алексей Васильевич|Дуняшин Алексей Васильевич]] (1904, Покш Толкан -1931, Самар ош). Эрзянь прозаик, публицист, критик.
+#  [[Раптанов, Тимофей Алексеевич|Раптанов Тимофей Алексеевич]] (1906 - 1936). Эрзянь сёрмадыця, прозаик, журналист.
+#  [[Радаев, Василий Кузьмич|Радаев Василий Кузьмич]] (1907 - 1991). Покш эрзянь валморозей, СССР-нь сёрмадеень вейсендявксонь совиця (1966), Мордовиянь Государственной премиянь лауреат (1979), раськень сёрмадей.
+#  [[Моро Артур|Артур Моро (Осипов Афанасий Матвеевич)]] (1909 -1989). Эрзянь валморозей.
+#  Чувашев Михаил Иванович (1909, с.Красные Ключи Бугурусланского уезда Самарань губ. - 1973, с. Шентала Шенталинского района Куйбышевской обл.). Эрзянь фольклорист.
+#  [[Лукьянов, Алексей Миронович|Лукьянов Алексей Миронович]] (1910 -1991) Эрзянь валморозей, прозаик, куляньсёрмадей, СССР-нь сёрмадеень вейсендявксонь совиця (1935).
+#  [[Кириллов, Пётр Семёнович|Кириллов Петр Семёнович]] (1910 - 1955). Эрзянь валморозей, прозаик, драматург, ютавтыця.
+#  Кавтаськин Лука Семёнович (1911, Покш Толкан—1977, Саранск). Содавикс эрзянь фольклорист, ютавтыця, литературовед, критик, фил.наукань кандидат (1953), Мордовиянь культурань заслуженной важодиця (1976), СССР-нь Сёрмадеень вейсендявксонь совиця (1948).
+#  Инжеватов Иван Корнилович (1911-1996) Эрзянь литературовед, критик, этнограф-топонимист, филологической наукань кандидат (1953), Мордовия Республикань Государственной премиянь лауреат (1997).
+#  [[Батаевень, Павел Петрович|Батаев Павел Петрович]] (1915, [[Од Пиче веле (Клявля буе)|Новые Сосны]] Бугурусланонь уезд Самарань губерния — 1942, г.Медынь Смоленской обл.). Эрзянь валморозей, куляньсёрмадей.
+#  Инчин Анатолий Иванович (1918 - 1997, Самар ош). Эрзянь валморозей, прозаик, куляньсёрмадей.
+#  Сетин Фёдор Иванович (1919, Захарка веле ней [[Сергиень буе Самарань ёнксcо|Сергиень буе]] Самарань ёнксcо. — 2003). Эрзянь литературовед, филологической наукань доктор (1978), профессор (1979).
+#  [[Люлякинань, Серафима Марковна|Люлякина Серафима Марковна]] (1922 - 1993). Эрзянь сказительница, моронь ладсиця, Мордовиянь Государственной премиянь лауреат (1992).
+#  Тимофеев Роман Тимофеевич (1924). Эрзянь валморозей. Россиянь Сёрмадеень вейсендявксос совиця.
+#  Ревизов Николай Егорович (1927 - 2004). Эрзянь валморозей, фотоартыця, куляньсёрмадей, Мордовия Республикань Государственной премиянь лауреат (1994).
+#  [[Втулкин, Михаил Алексеевич|Втулкин Михаил Алексеевич]] (1929 - 1991). Эрзянь сёрмадыця, валморозей, прозаик, куляньсёрмадей.
+#  [[Журавлёвонь, Числав Григорьевич|Журавлёв Числав Григорьевич]] (1935). Эрзянь сёрмадыця, валморозей, Россиянь сёрмадеень вейсендявксов совиця.
+#  [[Кадышень, Надежда Никитична|Кадышева Надежда Никитична]] (1959). Морыця, Россиянь Заслуженной артистка (1993), Мордовия Республикань народной артистка (1995).
+
+== Лисьм.: ==
 <references />
 
 {{Commonscat|Samara Oblast}}
