*Empty MediaWiki Message*

--- a/Мерема_(морамо-седямо_кужо).mw
+++ b/Мерема_(морамо-седямо_кужо).mw
@@ -21,9 +21,9 @@
  |Сайт               = 
 }}
 
-'''«Мерема»'''  — авань ды цёрань сёдямо-морамо кужо.   
+'''«Мерема»'''  — авань ды цёрань сёдямо-морамо кужо.
 
-Раськень морамо курось теезь [[2010 ие]]нь [[таштамков]]сто. Прявт тевекс ловови раськень койтнень вельмевтемась ды невтемась. Прявтось – Екатерина Модина, прядсь А. А. Архангельскоень лемсэ Пензань музыкань училища, Н. П. Огарёвонь лемсэ университет. Теде башка сон Н. П. Огарёв лемсэ университетсэ Раськень культурань институтонь раськень музыкань кафедрань тонавтыця, регионъютконь ды раськеютконь моротнень пелькстамотнесэ изниця. 
+Раськень морамо курось теезь [[Саран ош]]со [[2010 ие]]нь [[таштамков]]сто. Прявт тевекс ловови раськень койтнень вельмевтемась ды невтемась. Прявтось – Екатерина Модина, прядсь А. А. Архангельскоень лемсэ Пензань музыкань училища, Н. П. Огарёвонь лемсэ университет. Теде башка сон Н. П. Огарёв лемсэ университетсэ Раськень культурань институтонь раськень музыкань кафедрань тонавтыця, регионъютконь ды раськеютконь моротнень пелькстамотнесэ изниця. 
 
 «Мерема» курось изнякшнось ламо пелькстамотнесэ<ref name="«Эрзянь Мастор»">«Эрзянь Мастор», №466, Зинёронь Сантяй. Чем удивляет ансамбль «МЕРЕМА» {{Ref-myv}}</ref> Сарансо, Пензасо, Набережной Челнасо, Самарасо, Саратовсо, Ижевскойсэ, Омскойсэ, Сочисэ, Ало ошсо ды лия оштнэсэ, Эстониясо, Суомисэ ды Австриясо. «Меремась» изнясь раськеютконь казнень максомась пелькстамосояк (Эстония). Сон морси эрьва кодат покшчитнесэ: «Ошонь чи», «Мастя», «Изнямонь чи», «Содамочинь чи», «Медень чи», «Од ие» ды седе тов.
 
