--- a/Эрзят.mw
+++ b/Эрзят.mw
@@ -98,37 +98,39 @@
 * [[Инязор Пургаз]]
 * [[Абрамовонь, Кузьма Григорьевичесь|Абрамовонь Кузьма]]
 * [[Алексеевень Кузьма]]
+* [[Батаевень, Павел Петрович|Батаевень Павел]]
 * [[Виард, Василий Иванович|Ардеев, Василий Иванович (ВИАРД)]]
 * [[Артём Весёлый|Артём Веcёлый]]
 * [[Видяевень, Фёдор Алексеевич|Видяевень Фёдор Алексеевичесь]]
 * [[Гайни Пётр]]
-* [[Глуховонь Пётр]]
+* [[Глухов, Петр Семенович|Глуховонь Пётр]]
 * [[Дарькинень, Сергей Михайлович|Дарькинень Сергей]]
 * [[Доронинень Александр]]
 * [[Евсевьевень, Макар Евсевьевич|Евсевьевень Макар]]
-* [[Кадышень, Надежда Никитична]]
+* [[Кадышень, Надежда Никитична|Кадышень, Надежда Никитична]]
 * [[Кривошеева, Ефимия Петровна|Кривошеева Ефимия]]
 * [[Кривошеев, Илья Петрович|Кривошеев Илья]]
 * [[Журавлёвонь, Числав Григорьевич|Числав Журавлёв]]
 * [[Йовлань Оло|Йовлань Оло (Ромашкинень Олодимир )]]
-* [[Кадышевань Надежда]]
 * [[Куляскинень, Дмитрий Степанович|Куляскинень Дмитрий]]
+* [[Куторкин Андрей Дмитриевич|Куторкинэнь Андрей]]
 * [[Кутяковонь, Иван Семёнович|Кутяковонь Иван]]
-* [[Люлякинань Серафима]]
+* [[Люлякинань, Серафима Марковна|Люлякинань Серафима]]
 * [[Моро, Артур|Артур Моро]]
 * [[Надькинень, Дмитрий Тимофеевич|Дмитрий Надькин]]
 * [[Нуянь Видяз|Нуянь Видяз (Евгений Четвергов)]]
 * [[Пуркаевень, Максим Алексеевич|Максим Пуркаев]]
+* [[Рябовонь Анатолий]]
+* [[Рябов, Владимир Павлович|Рябовонь Владимир]]
 * [[Лёша Рав]]
 * [[Радаевень, Василий Иванович|Радаевень (Радин-Аловский) Василий]]
 * [[Радаевень, Василий Кузьмич|Радаев Василий]]
 * [[Руслановань, Лидия Андреевна|Руслановань Лидия Андреевна]]
-* [[Рябовонь Анатолий]]
 * [[Сафронов, Никас Степанович|Никас Сафронов]]
 * [[Чапаевень Василий]]
 * [[Чесноковонь, Фёдор Маркелович|Фёдор Чесноков]]
 * [[Чиндяйкинень, Николай Дмитриевич|Николай Чиндяйкин]]
-* [[Эрзямасонь Олёна]]
+* [[Эрзямассонь Олена|Эрзямасонь Олёна]]
 * [[Никул Эркай]]
 * [[Степан Эрьзя]]
 
